Heather adding sections

--- a/SignIn.html
+++ b/SignIn.html
@@ -6,6 +6,98 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Start of Heather's Section-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ <!--    End of Heather's Section -->
+
+<!-- Start of Anthony's Section -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- End of Anthony's Section  -->
+
+<!-- Start of Stevie's Section -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- End of Stevie's Section -->
+
 </body>
 </html>
