correct names in sections

--- a/SignIn.html
+++ b/SignIn.html
@@ -39,36 +39,6 @@
 
  <!--    End of Heather's Section -->
 
-<!-- Start of Anthony's Section -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- End of Anthony's Section  -->
-
 <!-- Start of Stevie's Section -->
 
 
@@ -97,7 +67,37 @@
 
 
 
-<!-- End of Stevie's Section -->
+<!-- End of Stevie's Section  -->
+
+<!-- Start of Ricardo's Section -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- End of Ricardo's Section -->
 
 </body>
 </html>
