Heather's part and section 2

--- a/SignIn.html
+++ b/SignIn.html
@@ -1,103 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="heather.css">
 </head>
+
 <body>
     <!-- Start of Heather's Section-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- <!--    End of Heather's Section -->
-
-<!-- Start of Stevie's Section -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- End of Stevie's Section  -->
-
-<!-- Start of Ricardo's Section -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- End of Ricardo's Section -->
+    <div class="oval"></div>
+    <div class="hswords">
+        <div class="hsleft">
+            <p class="hsaccount">Don't Have an Account Yet? </p>
+            <p class="hswait"> What are you waiting for? Let's Fix that now!</p>
+            <button> Sign Up </button>
+            <img class="hsimage" src="heather.images/Group 15@2x.png" alt="moon with stars">
+        </div>
+
+        <div class="hsright">
+            <h1 class="hssignin1"> Sign In</h1>
+            <Form class="hsicons2">
+                <Div class="hspersonicon">
+                    <label for="hsyourname"></label>
+                    <i> <img class="hsper" src="heather.images/personicon.png" alt="name section"></i>
+                    <input class="yournameinput" type="text" id="hsyourname">
+                </Div>
+                <Div class="hspersonicon2">
+                    <label for="hsyourname"></label>
+                    <i> <img class="hsper" class=hsmail src="heather.images/mailicon.jpeg" alt="name section"></i>
+                    <input class="yournameinput" type="text" id="hsyourname">
+                </Div>
+                <Div class="hspersonicon3">
+                    <label for="hsyourname"></label>
+                    <i> <img class="hsper" class=hslock src="heather.images/lockicon.jpeg" alt="name section"></i>
+                    <input class="yournameinput" type="text" id="hsyourname">
+                </Div>
+            </Form>
+        </div>
+
+
+    </div>
 
 </body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!--    End of Heather's Section -->
+
+    <!-- Start of Stevie's Section -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- End of Stevie's Section  -->
+
+    <!-- Start of Ricardo's Section -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- End of Ricardo's Section -->
+
+</body>
+
 </html>
