finialized left side, adjusted right side

--- a/SignIn.html
+++ b/SignIn.html
@@ -13,25 +13,28 @@
     <div class="oval"></div>
     <div class="hswords">
         <div class="hsleft">
-            <p class="hsaccount">Don't Have an Account Yet? </p>
-            <p class="hswait"> What are you waiting for? Let's Fix that now!</p>
-            <button> Sign Up </button>
+            <p class="hsaccount"><strong>Don't Have an Account Yet? </strong></p>
+            <p class="hswait"> <strong> What are you waiting for? Let's Fix that now!</strong></p>
+            <button class="hsbutton678"> <strong>Sign Up </strong></button>
             <img class="hsimage" src="heather.images/Group 15@2x.png" alt="moon with stars">
         </div>
-
         <div class="hsright">
+
             <h1 class="hssignin1"> Sign In</h1>
+<br>
             <Form class="hsicons2">
                 <Div class="hspersonicon">
                     <label for="hsyourname"></label>
                     <i> <img class="hsper" src="heather.images/personicon.png" alt="name section"></i>
                     <input class="yournameinput" type="text" id="hsyourname">
                 </Div>
+<br>
                 <Div class="hspersonicon2">
                     <label for="hsyourname"></label>
                     <i> <img class="hsper" class=hsmail src="heather.images/mailicon.jpeg" alt="name section"></i>
                     <input class="yournameinput" type="text" id="hsyourname">
                 </Div>
+<br>
                 <Div class="hspersonicon3">
                     <label for="hsyourname"></label>
                     <i> <img class="hsper" class=hslock src="heather.images/lockicon.jpeg" alt="name section"></i>
@@ -73,39 +76,9 @@
 
 
 
-    <!--    End of Heather's Section -->
+<!--    End of Heather's Section -->
 
-    <!-- Start of Stevie's Section -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- End of Stevie's Section  -->
-
-    <!-- Start of Ricardo's Section -->
+<!-- Start of Stevie's Section -->
 
 
 
@@ -133,7 +106,37 @@
 
 
 
-    <!-- End of Ricardo's Section -->
+<!-- End of Stevie's Section  -->
+
+<!-- Start of Ricardo's Section -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- End of Ricardo's Section -->
 
 </body>
 
