--- a/SignIn.html
+++ b/SignIn.html
@@ -21,29 +21,40 @@
         <div class="hsright">
 
             <h1 class="hssignin1"> Sign In</h1>
-<br>
+            <br>
             <Form class="hsicons2">
                 <Div class="hspersonicon">
                     <label for="hsyourname"></label>
                     <i> <img class="hsper" src="heather.images/personicon.png" alt="name section"></i>
                     <input class="yournameinput" type="text" id="hsyourname">
                 </Div>
-<br>
+                <br>
                 <Div class="hspersonicon2">
                     <label for="hsyourname"></label>
                     <i> <img class="hsper" class=hsmail src="heather.images/mailicon.jpeg" alt="name section"></i>
                     <input class="yournameinput" type="text" id="hsyourname">
                 </Div>
-<br>
+                <br>
                 <Div class="hspersonicon3">
                     <label for="hsyourname"></label>
                     <i> <img class="hsper" class=hslock src="heather.images/lockicon.jpeg" alt="name section"></i>
                     <input class="yournameinput" type="text" id="hsyourname">
                 </Div>
+                <button class="mainsignin"><strong>Sign In</strong></button>
+                <br>
+                <p class="platforms1"><strong>Or Sign in with social platforms</strong></p>
             </Form>
+            <div>
+                <ul class="container">
+                    <li><img class="iconimg1" src="heather.images/1940929_facebook_media_online_social_icon.png"
+                            alt="facebook icon"></li>
+                    <li><img class="iconimg2" src="heather.images/1940915_media_online_social_twitter_icon.png" X icon"></li>
+                    <li><img class="iconimg3" src="heather.images/1940925_google_media_online_search_social_icon.png"></li>
+                    <li><img class="iconimg4" src="heather.images/1940923_linkedin_media_online_social_icon.png" linked in
+                            icon"></li>
+                </ul>
+            </div>
         </div>
-
-
     </div>
 
 </body>
