--- a/SignIn.html
+++ b/SignIn.html
@@ -48,10 +48,12 @@
                 <ul class="container">
                     <li><img class="iconimg1" src="heather.images/1940929_facebook_media_online_social_icon.png"
                             alt="facebook icon"></li>
-                    <li><img class="iconimg2" src="heather.images/1940915_media_online_social_twitter_icon.png" X icon"></li>
-                    <li><img class="iconimg3" src="heather.images/1940925_google_media_online_search_social_icon.png"></li>
-                    <li><img class="iconimg4" src="heather.images/1940923_linkedin_media_online_social_icon.png" linked in
-                            icon"></li>
+                    <li><img class="iconimg2" src="heather.images/1940915_media_online_social_twitter_icon.png" X icon">
+                    </li>
+                    <li><img class="iconimg3" src="heather.images/1940925_google_media_online_search_social_icon.png">
+                    </li>
+                    <li><img class="iconimg4" src="heather.images/1940923_linkedin_media_online_social_icon.png" linked
+                            in icon"></li>
                 </ul>
             </div>
         </div>
